k8s/applications/test-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-web-server
  namespace: test-app
spec:
  selector:
    app: test-web-server
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  type: ClusterIP
